W6 frontend endpoint get kusntwerken onderdelen with sensor with tree view
