# Microservice_Monitoring/internal/domain/models/kunstwerk.go
@@ -23,3 +23,18 @@ type KunstwerkDetail struct {
 	Kunstwerk     Kunstwerk     `json:"kunstwerk"`
 	KunstwerkType KunstwerkType `json:"kunstwerkType"`
 }
+
+type KunstwerkOnderdeel struct {
+	ID          int64  `db:"id" json:"id"`
+	KunstwerkId int64  `db:"kunstwerk_id" json:"kunstwerkId"`
+	Naam        string `db:"naam" json:"naam"`
+	ParentId    *int64 `db:"parent_id" json:"parentId"`
+}
+
+type KunstwerkOnderdeelMetSensor struct {
+	ID          int64   `db:"id" json:"id"`
+	KunstwerkId int64   `db:"kunstwerk_id" json:"kunstwerkId"`
+	Naam        string  `db:"naam" json:"naam"`
+	ParentId    *int64  `db:"parent_id" json:"parentId"`
+	SensorIds   []int64 `db:"sensor_ids" json:"sensorIds"`
+}
